[Web Payments] Correct pluralization of "more items"

BUG=711058

Review-Url: https://codereview.chromium.org/2827293003
Cr-Commit-Position: refs/heads/master@{#466045}

Former-commit-id: aaf5884039a25b4f67eec57428e5e61eade2eaf4